--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>stm32_blink_led</name>
+	<name>lpc1114_blink_led</name>
 	<comment></comment>
 	<projects>
 	</projects>
