add current code from stm32cl_blink_led-1.2.1-120107

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>stm32_blink_led</name>
+	<name>stm32cl_blink_led</name>
 	<comment></comment>
 	<projects>
 	</projects>
